# uiWidgets

./: .gitignore  CMakeLists.txt
src/: MenuBarUI.cpp  MenuBarUI.h  Resource.cpp  Resource.h  ResourceList.cpp  ResourceList.h  ResourceManager.cpp  ResourceManager.h  ResourceTreeItem.h  ResourceViewUI.cpp  ResourceViewUI.h  main.cpp  types.h  utensil.h
